--- a/moving/src/index.css
+++ b/moving/src/index.css
@@ -1,5 +1,14 @@
+html {
+  height: 100%;
+}
+
 body {
+  /* border: 1px solid red; */
+  height: 100%;
   margin: 0;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
