--- a/moving/src/index.css
+++ b/moving/src/index.css
@@ -3,7 +3,6 @@ html {
 }
 
 body {
-  /* border: 1px solid red; */
   height: 100%;
   margin: 0;
   display: flex;
@@ -14,6 +13,11 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+}
+
+#root {
+  display: flex;
+  justify-content: center;
 }
 
 code {
